k8s/environments/jenkins/deployment.yml
# TwoPair) 가능하면 StatefulSet으로 바꿔서 로그 유지하고 싶은데, 그렇게 migration 하려면 volume 관리 잘 해야할 것 같다.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      env: production
      tier: cicd
      app: jenkins
      name: jenkins-pod
  template:
    metadata:
      labels:
        env: production
        tier: cicd
        app: jenkins
        name: jenkins-pod
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccountName: jenkins
      nodeSelector:
        jenkins: jenkins
#      affinity: # reference: https://kimjingo.tistory.com/144
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: jenkins
#                    operator: In
#                    values:
#                      - jenkins
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-data
          emptyDir: {}
