k8s/environments/jenkins/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    env: production
    tier: cicd
    app: jenkins
    name: jenkins-service
spec:
  selector:
    env: production
    tier: cicd
    app: jenkins
    name: jenkins-pod
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30006
    - name: jnlp
      port: 50000
      targetPort: 50000
      nodePort: 30007
